--- a/WeaponBuildEvents/WeaponBuildEvents/WeaponBuildEvents.Database/WeaponBuildEvents.Database.csproj
+++ b/WeaponBuildEvents/WeaponBuildEvents/WeaponBuildEvents.Database/WeaponBuildEvents.Database.csproj
@@ -31,9 +31,44 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommonLibs.Common, Version=1.0.0.9, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonLibs.Common.1.0.0.9\lib\net40\CommonLibs.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="CommonLibs.EnterpriseLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonLibs.EnterpriseLibrary.1.0.0.0\lib\CommonLibs.EnterpriseLibrary.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net40\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net40\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonLibs.EnterpriseLibrary.1.0.0.0\lib\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonLibs.EnterpriseLibrary.1.0.0.0\lib\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonLibs.EnterpriseLibrary.1.0.0.0\lib\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonLibs.EnterpriseLibrary.1.0.0.0\lib\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Interception, Version=2.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonLibs.EnterpriseLibrary.1.0.0.0\lib\Microsoft.Practices.Unity.Interception.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
@@ -44,14 +79,30 @@
     <Reference Include="System.ComponentModel.DataAnnotations;" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context\BaseContext.cs" />
+    <Compile Include="Context\WeaponBuildEventsContext.cs" />
+    <Compile Include="Database\BaseEntity.cs" />
+    <Compile Include="Database\IAvatarEntity.cs" />
+    <Compile Include="Database\IEntity.cs" />
+    <Compile Include="Database\IUserEntity.cs" />
+    <Compile Include="Database\RankListTop20.cs" />
+    <Compile Include="Migrations\201710200814228_InitialCreate.cs" />
+    <Compile Include="Migrations\201710200814228_InitialCreate.Designer.cs">
+      <DependentUpon>201710200814228_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Database\" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="App.config" />
     <None Include="D代码生成管理\Database(已废弃).csp" />
     <None Include="D代码生成管理\项目模板.csp" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710200814228_InitialCreate.resx">
+      <DependentUpon>201710200814228_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
